--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -30,7 +30,7 @@ div{
             color: blue;
         }
         img{
-           // border-radius: 50%;
+            border-radius: 50%;
             height: 400px;
             width: 400px;
             margin-left: 7%;
