--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
 
     <input placeholder="Git username" [(ngModel)]="username" value=""><br>
 
-    <button mat-raised-button color="accent" (click)=searchUser()>Find me! <i class="material-icons">search</i></button>
+    <button mat-raised-button color="primary" (click)=searchUser()>Find me! <i class="material-icons">search</i></button>
 
     <div class="content">
       <mat-card class="example-card" *ngIf='this.data'>
@@ -13,7 +13,7 @@
         <mat-card-header>
           <div mat-card-avatar class="example-header-image"></div>
           <mat-card-title class="username">      {{this.data?.login}}</mat-card-title>
-          <mat-card-subtitle>Name : {{this.data?.name}}</mat-card-subtitle>
+          <mat-card-subtitle>{{this.data?.name}}</mat-card-subtitle>
         </mat-card-header>
         <mat-spinner *ngIf='spinner'></mat-spinner>
         <img mat-card-image src={{this.data?.avatar_url}} alt={{this.data?.login}}><br>
