--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,3 @@
 <mat-toolbar color="primary">
-        <h1>Git Fetch - User Details for Git</h1>
-      </mat-toolbar>
+    <h1>Git Profile Viewer - User Details for Git</h1>
+  </mat-toolbar>
